--- a/register.html
+++ b/register.html
@@ -9,17 +9,17 @@
 <body>
     <div class="auth-container">
         <form id="registerForm">
-            <label for="email">Емейл:</label><br>
-            <input type="email" id="email" name="email" required><br>
-            <label for="username">Логін:</label><br>
-            <input type="text" id="username" name="username" required><br>
-            <label for="password">Пароль:</label><br>
-            <input type="password" id="password" name="password" required><br>
-            <label for="confirm_password">Повторіть пароль:</label><br>
-            <input type="password" id="confirm_password" name="confirm_password" required><br>
-            <label for="register_remember_me">Запамятати мене:</label>
+            <label class="login1" for="email">Емейл:</label><br>
+            <input class="login2" type="email" id="email" name="email" required><br>
+            <label class="login1"l for="username">Логін:</label><br>
+            <input class="login2" type="text" id="username" name="username" required><br>
+            <label class="login1" for="password">Пароль:</label><br>
+            <input class="login2" type="password" id="password" name="password" required><br>
+            <label class="login1"l for="confirm_password">Повторіть пароль:</label><br>
+            <input class="login2" type="password" id="confirm_password" name="confirm_password" required><br>
+            <label class="login1" for="register_remember_me">Запамятати мене:</label>
             <input type="checkbox" id="register_remember_me" name="remember_me"><br>
-            <input type="submit" value="Зареєструватись">
+            <input class="login6" type="submit" value="Зареєструватись">
         </form>
     </div>
     <script src="script.js"></script>
